--- a/tox.ini
+++ b/tox.ini
@@ -102,8 +102,8 @@ description = Run integration tests
 deps =
     juju==3.6.*
     pytest
-    pytest-asyncio
-    pytest-operator
+    pytest-jubilant
+    jubilant
     -r{toxinidir}/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
