--- a/tox.ini
+++ b/tox.ini
@@ -100,6 +100,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
+    boto3
     juju==3.6.*
     pytest
     pytest-jubilant
