--- a/charmed-bacula-server/snap/snapcraft.yaml
+++ b/charmed-bacula-server/snap/snapcraft.yaml
@@ -218,7 +218,7 @@ apps:
     command: opt/bacula/bin/bconsole -c /opt/bacula/etc/bconsole.conf
 
   make-postgresql-tables:
-    plugs: [ network ]
+    plugs: [ network, network-bind ]
     command: opt/bacula/scripts/make_postgresql_tables
 
   psql:
@@ -254,7 +254,6 @@ parts:
     plugin: autotools
     build-packages:
       - libpq-dev
-      - libs3-dev
       - libreadline-dev
       - libssl-dev
       - zlib1g-dev
@@ -267,7 +266,6 @@ parts:
       - libcap-dev
     stage-packages:
       - libpq5
-      - libs3-2
       - libreadline8t64
       - libssl3
       - zlib1g
