--- a/backup-integrator-operator/charmcraft.yaml
+++ b/backup-integrator-operator/charmcraft.yaml
@@ -1,28 +1,21 @@
 # Copyright 2025 Canonical Ltd.
 # See LICENSE file for licensing details.
-# This file configures Charmcraft.
-# See https://canonical-charmcraft.readthedocs-hosted.com/stable/howto/manage-charmcraft/ 
-# for guidance.
 
 type: charm
 subordinate: true
 name: backup-integrator
 title: Backup integrator
-summary: A integrator charm to declare backup sources.
+summary: A integrator charm to require backup on behalf of other charms.
 links:
   documentation: https://discourse.charmhub.io
-  issues: https://github.com/canonical/is-charms-template-repo/issues
-  source: https://github.com/canonical/is-charms-template-repo
+  issues: https://github.com/canonical/backup-operators/issues
+  source: https://github.com/canonical/backup-operators
   contact: https://launchpad.net/~canonical-is-devops
 
 description: |
-  A single sentence that says what the charm is, concisely and memorably.
-
-  A paragraph of one to three short sentences, that describe what the charm does.
-
-  A third paragraph that explains what need the charm meets.
-
-  Finally, a paragraph that describes whom the charm is useful for.
+  The backup integrator charm is a subordinate charm that requires 
+  backups on behalf of charms that do not implement the backup relation
+  themselves.
 
 requires:
   backup:
@@ -32,7 +25,6 @@ requires:
     scope: container
 
 platforms:
-  ubuntu@22.04:amd64:
   ubuntu@24.04:amd64:
 
 config:
