--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,14 @@ skip_missing_interpreters = True
 envlist = lint, unit, static, coverage-report
 
 [vars]
-src_path = {toxinidir}/src/
+src_path = {toxinidir}/backup-integrator-operator/src
 tst_path = {toxinidir}/tests/
-;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
+lib_path = {toxinidir}/backup-integrator-operator/lib/charms/backup_integrator/v0/backup.py
 all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
+  PYTHONPATH = {toxinidir}:{toxinidir}/backup-integrator-operator/lib:{[vars]src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
@@ -74,9 +74,10 @@ description = Run unit tests
 deps =
     coverage[toml]
     pytest
-    -r{toxinidir}/requirements.txt
+    ops[testing]
+    -r{toxinidir}/backup_integrator_operator/requirements.txt
 commands =
-    coverage run --source={[vars]src_path} \
+    coverage run --omit="*/lib/**" \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
     coverage report
 
@@ -85,7 +86,7 @@ description = Create test coverage report
 deps =
     coverage[toml]
     pytest
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/backup_integrator_operator/requirements.txt
 commands =
     coverage report
 
@@ -93,7 +94,7 @@ commands =
 description = Run static analysis tests
 deps =
     bandit[toml]
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/backup_integrator_operator/requirements.txt
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
 
@@ -105,6 +106,5 @@ deps =
     pytest
     pytest-jubilant
     jubilant
-    -r{toxinidir}/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
