--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,14 @@ skip_missing_interpreters = True
 envlist = lint, unit, static, coverage-report
 
 [vars]
-src_path = {toxinidir}/backup-integrator-operator/src
+src_path = {toxinidir}/backup_integrator_operator/src
 tst_path = {toxinidir}/tests/
-lib_path = {toxinidir}/backup-integrator-operator/lib/charms/backup_integrator/v0/backup.py
+lib_path = {toxinidir}/backup_integrator_operator/lib/charms/backup_integrator/v0/backup.py
 all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/backup-integrator-operator/lib:{[vars]src_path}
+  PYTHONPATH = {toxinidir}:{[vars]src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
