--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{[vars]src_path}
+  PYTHONPATH = {toxinidir}:{toxinidir}/backup_integrator_operator/lib
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
