--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/backup_integrator_operator/lib
+  PYTHONPATH = {toxinidir}:{toxinidir}/backup_integrator_operator/lib:{toxinidir}/bacula_fd_operator/lib
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
@@ -54,7 +54,8 @@ deps =
     requests
     types-PyYAML
     types-requests
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/backup_integrator_operator/requirements.txt
+    -r{toxinidir}/bacula_fd_operator/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
     # uncomment the following line if this charm owns a lib
@@ -76,6 +77,7 @@ deps =
     pytest
     ops[testing]
     -r{toxinidir}/backup_integrator_operator/requirements.txt
+    -r{toxinidir}/bacula_fd_operator/requirements.txt
 commands =
     coverage run --omit="*/lib/**" \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
@@ -87,6 +89,7 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/backup_integrator_operator/requirements.txt
+    -r{toxinidir}/bacula_fd_operator/requirements.txt
 commands =
     coverage report
 
@@ -95,14 +98,13 @@ description = Run static analysis tests
 deps =
     bandit[toml]
     -r{toxinidir}/backup_integrator_operator/requirements.txt
+    -r{toxinidir}/bacula_fd_operator/requirements.txt
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
 
 [testenv:integration]
 description = Run integration tests
 deps =
-    boto3
-    juju==3.6.*
     pytest
     pytest-jubilant
     jubilant
