--- a/bacula_server_operator/charmcraft.yaml
+++ b/bacula_server_operator/charmcraft.yaml
@@ -14,14 +14,9 @@ links:
   source: https://github.com/canonical/is-charms-template-repo
   contact: https://launchpad.net/~canonical-is-devops
 
-description: |
-  A single sentence that says what the charm is, concisely and memorably.
-
-  A paragraph of one to three short sentences, that describe what the charm does.
-
-  A third paragraph that explains what need the charm meets.
-
-  Finally, a paragraph that describes whom the charm is useful for.
+description: >-
+  The bacula-server charm helps install and manage Bacula server components,
+  including the Bacula Director, Bacula Storage Daemon, and Baculum.
 
 platforms:
   ubuntu@24.04:amd64:
