--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/backup_integrator_operator/lib:{toxinidir}/bacula_fd_operator/lib
+  PYTHONPATH = {toxinidir}:{toxinidir}/backup_integrator_operator/lib:{toxinidir}/bacula_fd_operator/lib::{toxinidir}/bacula_server_operator/lib
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
@@ -56,6 +56,8 @@ deps =
     types-requests
     -r{toxinidir}/backup_integrator_operator/requirements.txt
     -r{toxinidir}/bacula_fd_operator/requirements.txt
+    -r{toxinidir}/bacula_server_operator/requirements.txt
+    psycopg2-binary
 commands =
     pydocstyle {[vars]src_path}
     # uncomment the following line if this charm owns a lib
@@ -78,6 +80,8 @@ deps =
     ops[testing]
     -r{toxinidir}/backup_integrator_operator/requirements.txt
     -r{toxinidir}/bacula_fd_operator/requirements.txt
+    -r{toxinidir}/bacula_server_operator/requirements.txt
+    psycopg2-binary
 commands =
     coverage run --omit="*/lib/**" \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
@@ -90,6 +94,8 @@ deps =
     pytest
     -r{toxinidir}/backup_integrator_operator/requirements.txt
     -r{toxinidir}/bacula_fd_operator/requirements.txt
+    -r{toxinidir}/bacula_server_operator/requirements.txt
+    psycopg2-binary
 commands =
     coverage report
 
@@ -99,6 +105,8 @@ deps =
     bandit[toml]
     -r{toxinidir}/backup_integrator_operator/requirements.txt
     -r{toxinidir}/bacula_fd_operator/requirements.txt
+    -r{toxinidir}/bacula_server_operator/requirements.txt
+    psycopg2-binary
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
 
