--- a/tox.ini
+++ b/tox.ini
@@ -35,22 +35,25 @@ commands =
 description = Check code against coding style standards
 deps =
     black
+    ruff
     codespell
-    flake8<6.0.0
+    flake8
     flake8-builtins
-    flake8-copyright<6.0.0
+    flake8-copyright
     flake8-docstrings>=1.6.0
     flake8-docstrings-complete>=1.0.3
     flake8-test-docs>=1.0
     isort
     mypy
+    ops[testing]
     pep8-naming
     pydocstyle>=2.10
     pylint
-    pyproject-flake8<6.0.0
+    pyproject-flake8
     pytest
     pytest-asyncio
     pytest-operator
+    pytest-playwright
     requests
     types-PyYAML
     types-requests
