--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ commands =
     pflake8 {[vars]all_path} --ignore=W503
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
-    mypy {[vars]all_path}
+    mypy {[vars]src_path}
     pylint {[vars]all_path}
 
 [testenv:unit]
