--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ commands =
 description = Check code against coding style standards
 deps =
     black
+    boto3
     ruff
     codespell
     flake8
@@ -44,6 +45,7 @@ deps =
     flake8-docstrings-complete>=1.0.3
     flake8-test-docs>=1.0
     isort
+    jubilant
     mypy
     ops[testing]
     pep8-naming
