--- a/charmed_bacula_server/snap/snapcraft.yaml
+++ b/charmed_bacula_server/snap/snapcraft.yaml
@@ -1,3 +1,6 @@
+# Copyright 2025 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 name: charmed-bacula-server
 base: core24
 version: "15.0.3"
