--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -26,4 +26,5 @@ header:
     - '**/*.md.j2'
     - '**/lib/**'
     - '**/templates/**'
+    - 'charmed_bacula_server/snap/hooks/**'
   comment: on-failure
