Fix linting issues

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skip_missing_interpreters = True
 envlist = lint, unit, static, coverage-report
 
 [vars]
-src_path = {toxinidir}/backup_integrator_operator/src
+src_path = {toxinidir}/backup_integrator_operator/src {toxinidir}/bacula_fd_operator/src {toxinidir}/bacula_server_operator/src
 tst_path = {toxinidir}/tests/
 lib_path = {toxinidir}/backup_integrator_operator/lib/charms/backup_integrator/v0/backup.py
 all_path = {[vars]src_path} {[vars]tst_path}
