Fix integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -118,6 +118,8 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
+    boto3
+    requests
     pytest
     pytest-jubilant
     jubilant
