--- a/.github/workflows/publish_snap.yaml
+++ b/.github/workflows/publish_snap.yaml
@@ -6,14 +6,14 @@ on:
     branches:
       - main
     paths:
-      - charmed-bacula-service/**
+      - charmed-bacula-server/**
 
 jobs:
   build:
     name: Build charmed-bacula-server snap
     uses: canonical/data-platform-workflows/.github/workflows/build_snap.yaml@v35.0.2
     with:
-      path-to-snap-project-directory: ./charmed-bacula-service
+      path-to-snap-project-directory: ./charmed-bacula-server
 
   release:
     name: Release charmed-bacula-server snap
@@ -21,7 +21,7 @@ jobs:
       - build
     uses: canonical/data-platform-workflows/.github/workflows/release_snap.yaml@v35.0.2
     with:
-      path-to-snap-project-directory: ./charmed-bacula-service
+      path-to-snap-project-directory: ./charmed-bacula-server
       channel: latest/edge
       artifact-prefix: ${{ needs.build.outputs.artifact-prefix }}
     secrets:
