--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,4 +14,4 @@ jobs:
     name: Build charmed-bacula-server snap
     uses: canonical/data-platform-workflows/.github/workflows/build_snap.yaml@v35.0.2
     with:
-      path-to-snap-project-directory: ./charmed-bacula-service
+      path-to-snap-project-directory: ./charmed-bacula-server
