Add architectures to charmed-bacula-server snapcraft.yaml

--- a/charmed-bacula-server/snap/snapcraft.yaml
+++ b/charmed-bacula-server/snap/snapcraft.yaml
@@ -228,6 +228,10 @@ apps:
   htpasswd:
     command: usr/bin/htpasswd
 
+architectures:
+  - build-on: [amd64]
+    build-for: [amd64]
+
 parts:
   libs3:
     plugin: make
