Change architectures to platforms in snapcraft.yaml

--- a/charmed-bacula-server/snap/snapcraft.yaml
+++ b/charmed-bacula-server/snap/snapcraft.yaml
@@ -228,9 +228,8 @@ apps:
   htpasswd:
     command: usr/bin/htpasswd
 
-architectures:
-  - build-on: [amd64]
-    build-for: [amd64]
+platforms:
+  amd64:
 
 parts:
   libs3:
