--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,4 @@ jobs:
     name: Build charmed-bacula-server snap
     uses: canonical/data-platform-workflows/.github/workflows/build_snap.yaml@v35.0.2
     with:
-      path-to-snap-project-directory: ./charmed-bacula-server
+      path-to-snap-project-directory: ./charmed_bacula_server
