--- a/charmed_bacula_server/snap/snapcraft.yaml
+++ b/charmed_bacula_server/snap/snapcraft.yaml
@@ -294,7 +294,7 @@ parts:
       - --with-zstd
       - --with-openssl
       - --with-postgresql
-      - --with-s3
+      - --with-s3=../../libs3/install
       - --with-aws
       - --with-lzo
       - --with-scriptdir=/opt/bacula/scripts
