--- a/tox.ini
+++ b/tox.ini
@@ -118,10 +118,12 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
+    allure-pytest>=2.8.18
     boto3
-    requests
+    git+https://github.com/canonical/data-platform-workflows@v24.0.0\#subdirectory=python/pytest_plugins/allure_pytest_collection_report
+    jubilant
     pytest
     pytest-jubilant
-    jubilant
+    requests
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
