--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
       self-hosted-runner-label: "edge"
   integration-tests:
     uses: 
-      canonical/operator-workflows/.github/workflows/integration_test.yaml@main
+      canonical/operator-workflows/.github/workflows/integration_test.yaml@skip_integ
     secrets: inherit
     with:
       juju-channel: '3/stable'
