Use the new secrets deployed via platform-engineering-repos-secrets

--- a/.github/workflows/publish_snap.yaml
+++ b/.github/workflows/publish_snap.yaml
@@ -25,6 +25,6 @@ jobs:
       channel: latest/edge
       artifact-prefix: ${{ needs.build.outputs.artifact-prefix }}
     secrets:
-      snap-store-token: ${{ secrets.SNAP_STORE_TOKEN }}
+      snap-store-token: ${{ secrets.SNAPSTORE_TOKEN }}
     permissions:
       contents: write  # Needed to create git tags
