Try charm-binary-python-packages

--- a/bacula_fd_operator/charmcraft.yaml
+++ b/bacula_fd_operator/charmcraft.yaml
@@ -59,6 +59,8 @@ config:
 parts:
   charm:
     charm-entrypoint: scripts/entrypoint
+    charm-binary-python-packages:
+      - pydantic
     build-snaps:
       - rustup
     override-build: |
