--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,12 +13,21 @@ jobs:
       self-hosted-runner: true
       self-hosted-runner-label: "edge"
   integration-tests:
+    strategy:
+      fail-fast: false
+      matrix:
+        base:
+          - "ubuntu@24.04"
+          - "ubuntu@22.04"
     uses: 
       canonical/operator-workflows/.github/workflows/integration_test.yaml@main
     secrets: inherit
     with:
-      juju-channel: '3/stable'
-      provider: 'lxd'
+      juju-channel: "3/stable"
+      provider: "lxd"
+      extra-arguments: "--base=${{ matrix.base }}"
+      tmate-debug: true
+      tmate-timeout: 180
   snap-tests:
     name: Build charmed-bacula-server snap
     uses: 
