--- a/.github/workflows/test_terraform_modules.yaml
+++ b/.github/workflows/test_terraform_modules.yaml
@@ -11,10 +11,7 @@ on:
 
 jobs:
   terraform-tests:
-    # remove this condition when creating your repo
-    if: github.repository != 'canonical/platform-engineering-charm-template'
     uses: canonical/operator-workflows/.github/workflows/terraform_modules_test.yaml@main
     secrets: inherit
     with:
-      terraform-directories: '["terraform", "terraform-product"]'
-      #k8s-controller: true
+      terraform-directories: '["terraform"]'
